# openai-anthropic-converter

./: .gitignore  CLAUDE.md  README.md  README_zh.md  __init__.py  constants.py  pyproject.toml  ruff.toml  start_anthropic_server.sh  start_openai_server.sh  utils.py
.github/workflows/: ci.yml
anthropic_to_openai/: converter.py  request.py  response.py  stream.py
openai_anthropic_converter/: constants.py  utils.py
openai_anthropic_converter/anthropic_to_openai/: __init__.py  converter.py  request.py  response.py  stream.py
openai_anthropic_converter/openai_to_anthropic/: converter.py  request.py  response.py  stream.py
openai_anthropic_converter/servers/: anthropic_server.py  debug_page.py  logging_config.py  openai_server.py  schemas.py
openai_anthropic_converter/types/: __init__.py  anthropic_types.py  streaming_types.py
openai_to_anthropic/: __init__.py  request.py  response.py  stream.py
servers/: anthropic_server.py  openai_server.py
tests/: test_anthropic_to_openai.py  test_openai_to_anthropic.py  test_servers.py
types/: anthropic_types.py  openai_types.py  streaming_types.py
