[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openai-anthropic-converter"
version = "0.1.0"
description = "Standalone bidirectional protocol converter between OpenAI Chat Completion API and Anthropic Messages API"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "typing_extensions>=4.0",
]

[project.optional-dependencies]
server = [
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
    "httpx>=0.24.0",
    "python-dotenv>=0.19.0",
]
dev = [
    "pytest>=7.0",
    "ruff>=0.4.0",
    "mypy>=1.0",
    "httpx>=0.24.0",
]

[tool.setuptools.packages.find]
include = ["openai_anthropic_converter*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]
